tools/flowc/tests/errors/error17.flow
import string;

// Test on detection of name conflict of a nested switch

fun1() -> int {
	s = Some(5);
	switch (s) {
		Some(x): {
			t = Some(4);
			switch (t) {
				Some(x) : 3;
				None(): 2;
			}
		}
		None(): 1;
	}
}
